--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -14,12 +14,19 @@
 }
 
 .navbar a {
-  color: white;
-  text-decoration: none;
-  margin: 20px;
+  color: white; /* Default text color */
   font-size: 25px;
+  text-decoration: none; /* Remove underline */
+  padding: 10px 20px; /* Add some padding */
+  transition: color 0.3s, background-color 0.3s; /* Smooth transition */
 }
 
+/* Highlight on hover */
+.navbar a:hover {
+  color: #fff; /* Change text color on hover */
+  background-color: #3e497a; /* Change background color on hover */
+  border-radius: 5px; /* Optional: add rounded corners */
+}
 .toggleButton {
   width: 100%;
   height: 100px;
