wip. smallest screen width media query is good

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -272,10 +272,16 @@
 
 @media only screen and (max-width: 560px) {
   .name {
-    font-size: 30px !important;
+    font-size: 33px !important;
   }
 
   .prompt {
     font-size: 15px !important;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .prompt {
+    margin-top: 20px !important;
   }
 }
