--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -31,3 +31,15 @@ body {
     font-size: 50px;
   }
 }
+
+@media only screen and (max-width: 416px) {
+  .footer p {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 391px) {
+  .footer p {
+    font-size: 12px;
+  }
+}
